更新qiankun主应用依赖，添加文件忽略

--- a/examples/main/package.json
+++ b/examples/main/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^7.0.2"
   },
   "dependencies": {
+    "qiankun": "^2.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "vue": "^2.6.11",
