--- a/applications/app1/package.json
+++ b/applications/app1/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "antd": "^4.15.0",
     "bundle-loader": "^0.5.6",
+    "lx-ui": "git+ssh://gitlab@gitlab.ikcrm.com:40022/FrontEnd/lxComponents.git#dev",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
